tests/fixtures/syntax/valid/write_step_preserves_literal_variable_syntax.repor
case "write step preserves literal variable syntax" {
  write <".rellog/entries/001.kdl"> ```
    entry "entry" {
      kind "${ENTRY_KIND}"
    }
    ```
  $ true
  assert {
    exit 0
  }
}
