tests/fixtures/syntax/invalid/write_step_shallow_indent.repor
case "write step shallow indent is rejected" {
  write <"a.txt"> ```
    first
  mid
    ```
  $ true
  assert {
    exit 0
  }
}
